--- a/survey-box/package.json
+++ b/survey-box/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.16",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.1",
     "react-logger": "^1.1.0",
     "react-redux": "^7.2.2",
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.0.0"
   }
 }
