--- a/survey-box/package.json
+++ b/survey-box/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-logger": "^1.1.0",
     "react-redux": "^7.2.2",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-beautiful-dnd": "^13.0.0"
+    "@types/react-beautiful-dnd": "^13.0.0",
+    "@types/react-color": "^3.0.4"
   }
 }
