huge refactoring- not sure i will finish in time
i decided to approach the multiple surveys problem and it requires a lot of refactoring because the state is now completely changed.
the use effect is not updating as they should and there is a lot of debugging to do before continuing with the server side.
I'm starting a now job on may 9th, so i'm not sure i will manage to finish the project by then

--- a/survey-box/package.json
+++ b/survey-box/package.json
@@ -57,6 +57,8 @@
   },
   "devDependencies": {
     "@types/react-beautiful-dnd": "^13.0.0",
-    "@types/react-color": "^3.0.4"
+    "@types/react-color": "^3.0.4",
+    "@types/react-router": "^3.0.19",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
